Fixed the problem that newly added team name was previously checkout throughout all companies. Fixed the problem that Delete Confirmation button on mobile was not visible. Made some adjsutment on styling

--- a/src/components/DeleteTeam/DeleteTeam.scss
+++ b/src/components/DeleteTeam/DeleteTeam.scss
@@ -30,7 +30,7 @@
         height: 40px;
         @include flex(row, space-between, flex-end);
         margin: 0;
-        margin-top: auto;
+        margin-top: 5rem;
         margin-bottom: 2rem;
 
         & button {
@@ -40,7 +40,6 @@
 
             @include tablet {
                 width: 20%;
-                // font-family: "titillium";
             }
         }
 
@@ -62,6 +61,7 @@
 
         @include tablet {
             @include flex(row, flex-end, flex-end);
+            margin-top: auto;
         }
     }
 
