--- a/src/components/UserTeams/UserTeams.scss
+++ b/src/components/UserTeams/UserTeams.scss
@@ -15,6 +15,10 @@
         display: none;
     }
 
+    &-title{
+        font-size: 30px;
+    }
+
     &-nav {
         width: 100%;
         height: 100%;
@@ -52,7 +56,7 @@
             border-radius: 4px;
             margin-bottom: 1rem;
             padding: 0.5rem 1rem 1rem 1rem;
-            border: 1px solid #5C667E;
+            border: 3px solid #5C667E;
 
             &:hover {
                 background-color: rgba(10, 9, 10, 0.1);
@@ -60,8 +64,9 @@
 
             &-teamName {
                 font-weight: bold;
+                font-size: 22px;
                 display: block;
-                margin-bottom: 0.5rem;
+                margin-bottom: 1rem;
                 @include flex(row, space-between, center);
 
                 &-delete {
@@ -86,12 +91,21 @@
 
                     &-title {
                         transition: font-size 1s;
-
+                        width: 100%;
+                        height: 100%;
+                        display: block;
+                        color: #2E66E5;
+                        
                         &--triggered {
                             font-weight: bold;
-                            font-size: 30px;
-                            border-bottom: 3px solid black;
+                            font-size: 20px;
                         }
+                        // & span{
+                        //     display: block;
+                        //     width: 100%;
+                        //     height:100%;
+                        //     font-size: 20px;
+                        // }
                     }
 
 
@@ -101,7 +115,6 @@
                         overflow: hidden;
                         display: flex;
                         flex-direction: column;
-                        margin-top: 0.5rem;
 
                         &>* {
                             width: 100%;
@@ -160,17 +173,19 @@
         &-addNewTeam {
             width: 100%;
             padding: 0rem 1rem 1rem 1rem;
-            border: 1px solid #5C667E;
+            border: 3px solid #5C667E;
             border-radius: 5px;
             @include flex(column, center, center);
 
             &-icon {
                 font-size: 30px;
-                margin-bottom: 1rem;
-                transition: font-size 1s;
+                margin-bottom: 0.5rem;
+                margin-top:1rem;
+                transition: font-size,margin-top 1s;
 
                 &--hide {
                     font-size: 0;
+                    margin-top:0;
                 }
             }
 
@@ -178,6 +193,7 @@
                 width: 100%;
                 height: 150px;
                 transition: height 1s;
+                overflow: hidden;
                 @include flex(column, space-between, center);
 
                 &>* {
